@@ -45,6 +45,6 @@ advice from friends like these:
 
  Dan Fandrich, Gisle Vanem, Toby Peterson, Yang Tse, Daniel Black,
  Robin Johnson, Michal Marek, Ates Goral, Andres Garcia, Rob Crittenden,
- Emil Romanus
+ Emil Romanus, Alessandro Vesely
  
         Thanks! (and sorry if I forgot to mention someone)
